--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="exp.html">Experience</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </body>
 </html>
