--- a/index.html
+++ b/index.html
@@ -5,12 +5,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
+  <!--#Profile pic+skills-->
   <body>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="exp.html">Experience</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+    <!---nav bar--->
+    <header>
+      <h1 class="logo">You&Me</h1>
+          <nav>
+              <div class="nav-links">
+                  <ul>
+                      <li><a href="index.html" class="active">Home</a></li>
+                      <li><a href="exp.html">Experience</a></li>
+                      <li><a href="contact.html">Contact</a></li>
+                  </ul>
+              </div>
+          </nav>
+  </header>
+<!---content--->
+    <section class="home" id="home">
+      <div class="content">
+          <h2>Hi! I'm <span> Me</span>.</h2>
+          <h3> Buachompoo Rerksuitthirat</h3>
+          <p>This is going to be my portfolio! This is a part of a homework in my major. I hope you enjoy my work. <br>*Ps.Please note that this website is only responsive on PC, It cannot be use in Mobile-Phone.*</p>
+      </div>
+    </section>
+    <section class="aboutme">
+      <h2 class="heading"> About <span> Me</span></h2>
+    </section>
+
+    <section class="about" id="about">
+          <div class="me-pic">
+              <img src="./images/about.jpg">
+          </div>
+          <div class="me-text">
+              <h5>A CPE Student</h5>
+              <h2>I'm Me!</h2>
+              <p>Hi, my name is Me. I am 20 years old, and currently studying in Chiang Mai University. I major in Computer Engineering, Falculty of Engineering. Even though I'm not very good at this I am trying my best to survive.</p>
+          </div>
+    </section>
+
+    <section class="skills">
+      <h2 class="head">Skills</h2>
+      <div class="container">
+        <div class="row" id="skillscontainer">
+          <div class="bar">
+            <div class="info">
+                <img src="./images/figma.png">
+                <span>Figma</span>
+            </div>
+          </div>
+          <div class="bar">
+            <div class="info">
+                <img src="./images/html.png">
+                <span>HTML</span>
+            </div>
+          </div>
+          <div class="bar">
+            <div class="info">
+                <img src="./images/css.png">
+                <span>CSS</span>
+            </div>
+          </div>
+          <div class="bar">
+            <div class="info">
+                <img src="./images/illust.png">
+                <span>Illustrator</span>
+            </div>
+          </div>
+          <div class="bar">
+            <div class="info">
+                <img src="./images/python.png">
+                <span>Python</span>
+            </div>
+          </div>
+          <div class="bar">
+            <div class="info">
+                <img src="./images/botnoi.png">
+                <span>Botnoi</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
