--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <section class="contact" id="contact">
         <div class="contact-text">
             <h2> Contact <span> Me </span></h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum quasi fugit vel nihil animi aspernatur nemo repellat aliquam maiores, adipisci, a culpa rerum consectetur tempora sapiente dolorem ab odio. Iusto!</p>
+            <p>If you have any question feel free to ask me. Please don't ask about money because I'm also poor and broke. Hopefully you enjoy my basic website that I have to write night and day for it. <br>THANKYOU <3 </p>
             <div class="contact-list">
                 <li><i class='bx bxs-send'></i><a href="mailto:buachompoo_r@cmu.ac.th">buachompoo_r@cmu.ac.th</a></li>
                 <li><i class='bx bxs-phone'></i><a href="tel:0830340234">0830340234</a></li>
