--- a/exp.html
+++ b/exp.html
@@ -78,7 +78,25 @@
                     <h4>The Chatbot was about rental-service. It was inspired by anime.</h4>
                 </div>
             </div>
-        
+    </section>
+
+    <section class="hobby">
+        <div class="row">
+            <div class="content-col">
+                <h1> My <span>Hobby</span> & <span>Activities</span></h1>
+                <p>As for my hobby I like to read novels and watch tiktoks. For activities I like to apply for Thai buddy to take care of Foreign exchange students. I also like doing workshop and art because it helps with my mental health.</p>
+            </div>
+            <div class="img-col">
+                <div class="gallery">
+                    <img src="./images/art.jpg">
+                    <img src="./images/lino.jpg">
+                    <img src="./images/friends.jpg">
+                    <img src="./images/workshop.jpg">
+                    <img src="./images/card.jpg">
+                    <img src="./images/workshop.jpg">
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
